--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ a {
                                 Intro Section              
 --------------------------------------------------------------------------------*/
 #intro {
-    background: url('..//images/office.jpg') 10% 0 repeat-y fixed;
+    background: url('..//images/top2.jpg') 10% 0 repeat-y fixed;
     -webkit-background-size: cover;
     background-size: cover;
     background-position: center center;
@@ -386,7 +386,7 @@ a {
                                 Education Section              
 --------------------------------------------------------------------------------*/
 #education {
-    background: url('../images/library-copy1.jpg') 50% 0 repeat-y fixed;
+    background: url('../images/library-copy.jpg') 50% 0 repeat-y fixed;
     background-size: cover;
     background-position: center center;
     padding-top: 10rem;
